landing/landing-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing-nginx-proxy
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: landing-nginx-proxy
  template:
    metadata:
      labels:
        app: landing-nginx-proxy
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/conf.d
      volumes:
      - name: nginx-config
        configMap:
          name: landing-nginx-proxy
