landing/landing-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: landing-nginx-proxy
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: landing-nginx-proxy
