landing/landing-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: landing-nginx-proxy
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: treant.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: landing-nginx-proxy
            port:
              number: 80
  tls:
    - hosts:
        - treant.dev
      secretName: landing
